# CoinSorter

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.rst
include/: beta.h  casimir.h  coins.h  color.h  env.h  observables.h  physics_components.h  physics_constants.h  physics_framework.h  simulation.h  version.h
scripts/: build.sh
src/: beta.c  casimir.c  coin_algorithms.c  coin_systems.c  coinsorter.c  color.c  env.c  observables.c  physics_components.c  physics_framework.c  simulation.c  superforce_main.c  superforce_ncui.c  superforce_ui.c
tests/: test_area.c  test_basic.c  test_coin_adv.c  test_observables.c  test_physics_framework.c  test_sim.c
